--- a/src/user/admin/projects/tasks/taskColumn/taskColumn.css
+++ b/src/user/admin/projects/tasks/taskColumn/taskColumn.css
@@ -1,14 +1,19 @@
 #taskColumnDiv {
     border: 1px solid black;
     border-radius: 10px;
-    background: linear-gradient(45deg, #8B4513, #D2B48C, #556B2F);
+    background: rgba(128, 128, 128, 0.5);
+    border-radius: 20px;
     padding: 0 20px 10px 20px;
-    color: gold;
+    color: white;
     margin: 20px;
+    width: auto;
 }
 
 .taskTables {
     text-align: center;
+    color: white;
+    background-color: rgb(5, 5, 5, 0.5);
+    border-radius: 20px;
 }
 
 tr {
@@ -18,4 +23,5 @@ tr {
 
 thead {
     font-size: large;
+    color: white;
 }
