--- a/src/user/admin/projects/tasks/taskColumnUser/taskColumnUser.css
+++ b/src/user/admin/projects/tasks/taskColumnUser/taskColumnUser.css
@@ -33,3 +33,44 @@ thead {
 .suggestedTimesSpan {
     margin-right: 15px;
 }
+
+#cardsDiv {
+    width: 100%;
+    display: flex;
+    gap: 5px;
+    cursor: pointer;
+}
+
+.cards {
+    position: relative;
+    width: 50px; 
+    height: auto; 
+    margin: 5px;
+    transition: transform 0.3s; 
+}
+
+.cards:hover .hoverTextCard {
+    opacity: 1;
+}
+
+.cards:hover {
+    transform: scale(2);
+    z-index: 1;
+}
+
+.hoverTextCard {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: opacity 0.3s;
+    font-size: medium;
+    background-color: rgba(35, 33, 33, 0.5);
+    color: white;
+}
+
